--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <nav>
         <div id="flyout">
             <h2><a href="mesenger.html">contacts</a></h2>
-            <h2><a href="forum.html">forum</a></h2>
+            <h2><a href="forum.html">work in progress</a></h2>
             <h2><a href="#">hi</a></h2>
             <h2><a href="#">hi</a></h2>
             <h2><a href="#">hi</a></h2>
