--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
         <div id="flyout">
             <h2><a href="mesenger.html">contacts</a></h2>
             <h2><a href="forum.html">work in progress</a></h2>
-            <h2><a href="#">hi</a></h2>
-            <h2><a href="#">hi</a></h2>
-            <h2><a href="#">hi</a></h2>
+            <h2><a href="#">work in progress</a></h2>
+            <h2><a href="#">work in progress</a></h2>
+            <h2><a href="#">work in progress</a></h2>
         </div>
     </nav>  
     <div class="content">
