--- a/mesenger.html
+++ b/mesenger.html
@@ -98,9 +98,9 @@
             
             <h2 style="margin-top: 20vw;"><a href="index.html">home</a></h2>
             <h2><a href="forum.html">work in prgress</a></h2>
-            <h2><a href="#">hi</a></h2>
-            <h2><a href="#">hi</a></h2>
-            <h2><a href="#">hi</a></h2>
+            <h2><a href="#">work in progress</a></h2>
+            <h2><a href="#">work in progress</a></h2>
+            <h2><a href="#">work in progress</a></h2>
         </div>
     </nav>
     <div class="penutbutter:)">
@@ -109,7 +109,7 @@
             <H3>Contacts  </H3>
             <p3>SIGNAL:<p3><a href="https://signal.me/#eu/bdX2c-c3nos19LJW0y5tjnZOjeRvD1NVQ0GcK2XbNHmjUtJhCIdIIo0jvwxn3F36">Signal.42</a>
             <div></div>
-            <p3>Gmail:</p3><a style="color: rgb(28, 246, 28); text-decoration:none;" href="mailto:botsec42@gmail.com">click here </a>
+            <p3>Gmail:</p3><a style="color: rgb(28, 246, 28); text-decoration:none;" href="mailto:botsec42@gmail.com">botsec42@gmail.com </a>
         <div></div>
         
         </div>
