--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <div id="flyout">
             <h2><a href="mesenger.html">contacts</a></h2>
             <h2><a href="forum.html">work in progress</a></h2>
-            <h2><a href="#">work in progress</a></h2>
+            <h2><a href="tutorial.html">work in progress</a></h2>
             <h2><a href="#">work in progress</a></h2>
             <h2><a href="#">work in progress</a></h2>
         </div>
