--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
     </nav>  
     <div class="content">
         <div>
-            <h3>Hi, I'm s1gnal, the leader of this group</h3>
-            <img src="signal.jpg" alt="Signal">
+            <h3>Hi, I'm M0D, the leader of this group</h3>
+            <img src="signal.jpg" alt="M0D">
         </div>
     </div>
     <div class="section">
