--- a/mesenger.html
+++ b/mesenger.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Botsec start Page</title>
     <style>
         body {
             background-image: url('https://i.gifer.com/BLkE.gif');
