--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <div></div>
     </div>
     <div class="top">
-        <h2>Welcome to BotSec</h2>
+        <h2>Welcome to BotSec website</h2>
     </div>
     <nav>
         <div id="flyout">
