--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <div class="content">
         <div>
             <h3>Hi, I'm M0D, the leader of this group</h3>
-            <img src="image.png" alt="M0D">
+            <img src="Screenshot 2024-11-08 143034.png" alt="M0D">
         </div>
     </div>
     <div class="section">
